Nansus/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PRGM ID main_quad add_program_function EOS program_prime
Rule 2     program_prime -> vars program_prime
Rule 3     program_prime -> modules program_prime
Rule 4     program_prime -> program_second_prime
Rule 5     program_second_prime -> MAIN fill_main LEFTBRACE program_third_prime
Rule 6     program_third_prime -> vars program_third_prime
Rule 7     program_third_prime -> body RIGHTBRACE EOS
Rule 8     main_quad -> <empty>
Rule 9     add_program_function -> <empty>
Rule 10    fill_main -> <empty>
Rule 11    vars -> type vars_prime vars_fourth_prime
Rule 12    vars_prime -> ID save_id vars_second_prime
Rule 13    vars_second_prime -> change_dimension LEFTB exp RIGHTB first_dimension vars_third_prime
Rule 14    vars_second_prime -> <empty>
Rule 15    first_dimension -> <empty>
Rule 16    vars_third_prime -> LEFTB exp RIGHTB second_dimension dimensional_address_allocation
Rule 17    vars_third_prime -> dimensional_address_allocation
Rule 18    second_dimension -> <empty>
Rule 19    dimensional_address_allocation -> <empty>
Rule 20    vars_fourth_prime -> SEPARATOR store_variable vars_prime vars_fourth_prime
Rule 21    vars_fourth_prime -> store_variable vars_fifth_prime
Rule 22    vars_fifth_prime -> EOS
Rule 23    save_id -> <empty>
Rule 24    change_dimension -> <empty>
Rule 25    store_variable -> <empty>
Rule 26    type -> TYPEINT
Rule 27    type -> TYPEFLOAT
Rule 28    type -> TYPECHAR
Rule 29    body -> statement body_prime
Rule 30    body_prime -> body
Rule 31    body_prime -> <empty>
Rule 32    modules -> FUNCTION modules_prime ID add_module LEFTP modules_second_prime
Rule 33    modules_prime -> type
Rule 34    modules_prime -> NOTYPE void_type
Rule 35    modules_second_prime -> type ID add_parameter modules_third_prime
Rule 36    modules_third_prime -> SEPARATOR modules_second_prime
Rule 37    modules_third_prime -> RIGHTP LEFTBRACE modules_fourth_prime
Rule 38    modules_fourth_prime -> vars modules_fourth_prime
Rule 39    modules_fourth_prime -> body modules_fifth_prime
Rule 40    modules_fifth_prime -> RETURN exp return_quad EOS RIGHTBRACE endproc_quad
Rule 41    modules_fifth_prime -> RIGHTBRACE endproc_quad
Rule 42    void_type -> <empty>
Rule 43    add_module -> <empty>
Rule 44    add_parameter -> <empty>
Rule 45    return_quad -> <empty>
Rule 46    endproc_quad -> <empty>
Rule 47    statement -> assignment EOS
Rule 48    statement -> print EOS
Rule 49    statement -> functioncall EOS
Rule 50    statement -> condition
Rule 51    statement -> specialfunction EOS
Rule 52    statement -> input EOS
Rule 53    compoundexp -> expression eval_logic compoundexp_prime
Rule 54    compoundexp_prime -> AND push_operator compoundexp
Rule 55    compoundexp_prime -> OR push_operator compoundexp
Rule 56    compoundexp_prime -> <empty>
Rule 57    eval_logic -> <empty>
Rule 58    expression -> exp eval_relational expression_prime
Rule 59    expression_prime -> GREATER push_operator expression
Rule 60    expression_prime -> LESS push_operator expression
Rule 61    expression_prime -> EQUAL push_operator expression
Rule 62    expression_prime -> NOTEQUAL push_operator expression
Rule 63    expression_prime -> GREATEREQUAL push_operator expression
Rule 64    expression_prime -> LESSEQUAL push_operator expression
Rule 65    expression_prime -> <empty>
Rule 66    eval_relational -> <empty>
Rule 67    exp -> term eval_term exp_prime
Rule 68    exp_prime -> PLUS push_operator exp
Rule 69    exp_prime -> MINUS push_operator exp
Rule 70    exp_prime -> <empty>
Rule 71    eval_term -> <empty>
Rule 72    term -> factor eval_factor term_prime
Rule 73    term_prime -> MULTIPLY push_operator term
Rule 74    term_prime -> DIVIDE push_operator term
Rule 75    term_prime -> <empty>
Rule 76    eval_factor -> <empty>
Rule 77    factor -> LEFTP fake_bottom expression RIGHTP pop_fake_bottom
Rule 78    factor -> operand
Rule 79    factor -> PLUS operand
Rule 80    factor -> MINUS operand
Rule 81    fake_bottom -> <empty>
Rule 82    pop_fake_bottom -> <empty>
Rule 83    operand -> CSTI evaluate_operation_int
Rule 84    operand -> CSTF evaluate_operation_float
Rule 85    operand -> CSTC evaluate_operation_char
Rule 86    operand -> ID push_id operand_prime
Rule 87    operand_prime -> LEFTB exp RIGHTB operand_second_prime
Rule 88    operand_prime -> LEFTP exp operand_third_prime
Rule 89    operand_prime -> <empty>
Rule 90    operand_second_prime -> <empty>
Rule 91    operand_second_prime -> LEFTB exp RIGHTB
Rule 92    operand_third_prime -> SEPARATOR exp operand_third_prime
Rule 93    operand_third_prime -> RIGHTP
Rule 94    push_id -> <empty>
Rule 95    evaluate_operation_int -> <empty>
Rule 96    evaluate_operation_float -> <empty>
Rule 97    evaluate_operation_char -> <empty>
Rule 98    assignment -> ID push_id assignment_prime EQUALS push_operator expression eval_assignment
Rule 99    assignment_prime -> <empty>
Rule 100   assignment_prime -> LEFTB exp RIGHTB assignment_second_prime
Rule 101   assignment_second_prime -> <empty>
Rule 102   assignment_second_prime -> LEFTB exp RIGHTB
Rule 103   eval_assignment -> <empty>
Rule 104   condition -> WHILE save_jump LEFTP compoundexp RIGHTP gotof_quad LEFTBRACE body RIGHTBRACE goto_while_fill
Rule 105   condition -> DO save_jump LEFTBRACE body RIGHTBRACE WHILE LEFTP compoundexp RIGHTP gotov_quad
Rule 106   condition -> IF condition_prime
Rule 107   condition_prime -> LEFTP compoundexp RIGHTP gotof_quad condition_second_prime
Rule 108   condition_second_prime -> statement condition_third_prime
Rule 109   condition_second_prime -> LEFTBRACE body RIGHTBRACE condition_third_prime
Rule 110   condition_third_prime -> goto_if_fill ELSEIF condition_prime
Rule 111   condition_third_prime -> ELSE goto_else condition_fourth_prime
Rule 112   condition_third_prime -> goto_if_fill
Rule 113   condition_fourth_prime -> statement goto_if_fill
Rule 114   condition_fourth_prime -> LEFTBRACE body RIGHTBRACE goto_if_fill
Rule 115   save_jump -> <empty>
Rule 116   gotof_quad -> <empty>
Rule 117   goto_else -> <empty>
Rule 118   gotov_quad -> <empty>
Rule 119   goto_if_fill -> <empty>
Rule 120   goto_while_fill -> <empty>
Rule 121   functioncall -> ID verify_function LEFTP fake_bottom exp verify_parameter functioncall_prime
Rule 122   functioncall_prime -> SEPARATOR exp verify_parameter functioncall_prime
Rule 123   functioncall_prime -> verify_param_count RIGHTP pop_fake_bottom store_memory_data go_sub_quad
Rule 124   verify_function -> <empty>
Rule 125   verify_parameter -> <empty>
Rule 126   verify_param_count -> <empty>
Rule 127   store_memory_data -> <empty>
Rule 128   go_sub_quad -> <empty>
Rule 129   push_operator -> <empty>
Rule 130   print -> PRINT LEFTP expression print_quad print_prime
Rule 131   print_prime -> SEPARATOR expression print_quad print_prime
Rule 132   print_prime -> RIGHTP
Rule 133   print_quad -> <empty>
Rule 134   specialfunction -> JEDO POINT specialfunction_prime
Rule 135   specialfunction_prime -> CIRCLE LEFTP exp RIGHTP one_argument_quad
Rule 136   specialfunction_prime -> SQUARE LEFTP exp RIGHTP one_argument_quad
Rule 137   specialfunction_prime -> RECTANGLE LEFTP exp SEPARATOR exp RIGHTP two_argument_quad
Rule 138   specialfunction_prime -> TRIANGLE LEFTP exp RIGHTP one_argument_quad
Rule 139   specialfunction_prime -> FORWARD LEFTP exp RIGHTP one_argument_quad
Rule 140   specialfunction_prime -> BACK LEFTP exp RIGHTP one_argument_quad
Rule 141   specialfunction_prime -> TURNRIGHT LEFTP exp RIGHTP one_argument_quad
Rule 142   specialfunction_prime -> TURNLEFT LEFTP exp RIGHTP one_argument_quad
Rule 143   specialfunction_prime -> COLOR LEFTP exp SEPARATOR exp SEPARATOR exp RIGHTP three_argument_quad
Rule 144   specialfunction_prime -> THICKNESS LEFTP exp RIGHTP one_argument_quad
Rule 145   specialfunction_prime -> STARTPEN LEFTP RIGHTP no_argument_quad
Rule 146   specialfunction_prime -> STOPPEN LEFTP RIGHTP no_argument_quad
Rule 147   specialfunction_prime -> STARTFILL LEFTP RIGHTP no_argument_quad
Rule 148   specialfunction_prime -> FILLSHAPE LEFTP exp SEPARATOR exp SEPARATOR exp RIGHTP three_argument_quad
Rule 149   specialfunction_prime -> STOPFILL LEFTP RIGHTP no_argument_quad
Rule 150   specialfunction_prime -> RESTART LEFTP RIGHTP no_argument_quad
Rule 151   specialfunction_prime -> <empty>
Rule 152   no_argument_quad -> <empty>
Rule 153   one_argument_quad -> <empty>
Rule 154   two_argument_quad -> <empty>
Rule 155   three_argument_quad -> <empty>
Rule 156   input -> READINPUT LEFTP ID input_quad RIGHTP
Rule 157   input_quad -> <empty>

Terminals, with rules where they appear

AND                  : 54
BACK                 : 140
CIRCLE               : 135
COLOR                : 143
CSTC                 : 85
CSTF                 : 84
CSTI                 : 83
DIVIDE               : 74
DO                   : 105
ELSE                 : 111
ELSEIF               : 110
EOS                  : 1 7 22 40 47 48 49 51 52
EQUAL                : 61
EQUALS               : 98
FILLSHAPE            : 148
FORWARD              : 139
FUNCTION             : 32
GREATER              : 59
GREATEREQUAL         : 63
ID                   : 1 12 32 35 86 98 121 156
IF                   : 106
JEDO                 : 134
LEFTB                : 13 16 87 91 100 102
LEFTBRACE            : 5 37 104 105 109 114
LEFTP                : 32 77 88 104 105 107 121 130 135 136 137 138 139 140 141 142 143 144 145 146 147 148 149 150 156
LESS                 : 60
LESSEQUAL            : 64
MAIN                 : 5
MINUS                : 69 80
MULTIPLY             : 73
NOTEQUAL             : 62
NOTYPE               : 34
OR                   : 55
PLUS                 : 68 79
POINT                : 134
PRGM                 : 1
PRINT                : 130
READINPUT            : 156
RECTANGLE            : 137
RESTART              : 150
RETURN               : 40
RIGHTB               : 13 16 87 91 100 102
RIGHTBRACE           : 7 40 41 104 105 109 114
RIGHTP               : 37 77 93 104 105 107 123 132 135 136 137 138 139 140 141 142 143 144 145 146 147 148 149 150 156
SEPARATOR            : 20 36 92 122 131 137 143 143 148 148
SQUARE               : 136
STARTFILL            : 147
STARTPEN             : 145
STOPFILL             : 149
STOPPEN              : 146
THICKNESS            : 144
TRIANGLE             : 138
TURNLEFT             : 142
TURNRIGHT            : 141
TYPECHAR             : 28
TYPEFLOAT            : 27
TYPEINT              : 26
WHILE                : 104 105
error                : 

Nonterminals, with rules where they appear

add_module           : 32
add_parameter        : 35
add_program_function : 1
assignment           : 47
assignment_prime     : 98
assignment_second_prime : 100
body                 : 7 30 39 104 105 109 114
body_prime           : 29
change_dimension     : 13
compoundexp          : 54 55 104 105 107
compoundexp_prime    : 53
condition            : 50
condition_fourth_prime : 111
condition_prime      : 106 110
condition_second_prime : 107
condition_third_prime : 108 109
dimensional_address_allocation : 16 17
endproc_quad         : 40 41
eval_assignment      : 98
eval_factor          : 72
eval_logic           : 53
eval_relational      : 58
eval_term            : 67
evaluate_operation_char : 85
evaluate_operation_float : 84
evaluate_operation_int : 83
exp                  : 13 16 40 58 68 69 87 88 91 92 100 102 121 122 135 136 137 137 138 139 140 141 142 143 143 143 144 148 148 148
exp_prime            : 67
expression           : 53 59 60 61 62 63 64 77 98 130 131
expression_prime     : 58
factor               : 72
fake_bottom          : 77 121
fill_main            : 5
first_dimension      : 13
functioncall         : 49
functioncall_prime   : 121 122
go_sub_quad          : 123
goto_else            : 111
goto_if_fill         : 110 112 113 114
goto_while_fill      : 104
gotof_quad           : 104 107
gotov_quad           : 105
input                : 52
input_quad           : 156
main_quad            : 1
modules              : 3
modules_fifth_prime  : 39
modules_fourth_prime : 37 38
modules_prime        : 32
modules_second_prime : 32 36
modules_third_prime  : 35
no_argument_quad     : 145 146 147 149 150
one_argument_quad    : 135 136 138 139 140 141 142 144
operand              : 78 79 80
operand_prime        : 86
operand_second_prime : 87
operand_third_prime  : 88 92
pop_fake_bottom      : 77 123
print                : 48
print_prime          : 130 131
print_quad           : 130 131
program              : 0
program_prime        : 1 2 3
program_second_prime : 4
program_third_prime  : 5 6
push_id              : 86 98
push_operator        : 54 55 59 60 61 62 63 64 68 69 73 74 98
return_quad          : 40
save_id              : 12
save_jump            : 104 105
second_dimension     : 16
specialfunction      : 51
specialfunction_prime : 134
statement            : 29 108 113
store_memory_data    : 123
store_variable       : 20 21
term                 : 67 73 74
term_prime           : 72
three_argument_quad  : 143 148
two_argument_quad    : 137
type                 : 11 33 35
vars                 : 2 6 38
vars_fifth_prime     : 21
vars_fourth_prime    : 11 20
vars_prime           : 11 20
vars_second_prime    : 12
vars_third_prime     : 13
verify_function      : 121
verify_param_count   : 123
verify_parameter     : 121 122
void_type            : 34

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PRGM ID main_quad add_program_function EOS program_prime

    PRGM            shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PRGM . ID main_quad add_program_function EOS program_prime

    ID              shift and go to state 3


state 3

    (1) program -> PRGM ID . main_quad add_program_function EOS program_prime
    (8) main_quad -> .

    EOS             reduce using rule 8 (main_quad -> .)

    main_quad                      shift and go to state 4

state 4

    (1) program -> PRGM ID main_quad . add_program_function EOS program_prime
    (9) add_program_function -> .

    EOS             reduce using rule 9 (add_program_function -> .)

    add_program_function           shift and go to state 5

state 5

    (1) program -> PRGM ID main_quad add_program_function . EOS program_prime

    EOS             shift and go to state 6


state 6

    (1) program -> PRGM ID main_quad add_program_function EOS . program_prime
    (2) program_prime -> . vars program_prime
    (3) program_prime -> . modules program_prime
    (4) program_prime -> . program_second_prime
    (11) vars -> . type vars_prime vars_fourth_prime
    (32) modules -> . FUNCTION modules_prime ID add_module LEFTP modules_second_prime
    (5) program_second_prime -> . MAIN fill_main LEFTBRACE program_third_prime
    (26) type -> . TYPEINT
    (27) type -> . TYPEFLOAT
    (28) type -> . TYPECHAR

    FUNCTION        shift and go to state 12
    MAIN            shift and go to state 13
    TYPEINT         shift and go to state 14
    TYPEFLOAT       shift and go to state 15
    TYPECHAR        shift and go to state 16

    program_prime                  shift and go to state 7
    vars                           shift and go to state 8
    modules                        shift and go to state 9
    program_second_prime           shift and go to state 10
    type                           shift and go to state 11

state 7

    (1) program -> PRGM ID main_quad add_program_function EOS program_prime .

    $end            reduce using rule 1 (program -> PRGM ID main_quad add_program_function EOS program_prime .)


state 8

    (2) program_prime -> vars . program_prime
    (2) program_prime -> . vars program_prime
    (3) program_prime -> . modules program_prime
    (4) program_prime -> . program_second_prime
    (11) vars -> . type vars_prime vars_fourth_prime
    (32) modules -> . FUNCTION modules_prime ID add_module LEFTP modules_second_prime
    (5) program_second_prime -> . MAIN fill_main LEFTBRACE program_third_prime
    (26) type -> . TYPEINT
    (27) type -> . TYPEFLOAT
    (28) type -> . TYPECHAR

    FUNCTION        shift and go to state 12
    MAIN            shift and go to state 13
    TYPEINT         shift and go to state 14
    TYPEFLOAT       shift and go to state 15
    TYPECHAR        shift and go to state 16

    vars                           shift and go to state 8
    program_prime                  shift and go to state 17
    modules                        shift and go to state 9
    program_second_prime           shift and go to state 10
    type                           shift and go to state 11

state 9

    (3) program_prime -> modules . program_prime
    (2) program_prime -> . vars program_prime
    (3) program_prime -> . modules program_prime
    (4) program_prime -> . program_second_prime
    (11) vars -> . type vars_prime vars_fourth_prime
    (32) modules -> . FUNCTION modules_prime ID add_module LEFTP modules_second_prime
    (5) program_second_prime -> . MAIN fill_main LEFTBRACE program_third_prime
    (26) type -> . TYPEINT
    (27) type -> . TYPEFLOAT
    (28) type -> . TYPECHAR

    FUNCTION        shift and go to state 12
    MAIN            shift and go to state 13
    TYPEINT         shift and go to state 14
    TYPEFLOAT       shift and go to state 15
    TYPECHAR        shift and go to state 16

    modules                        shift and go to state 9
    program_prime                  shift and go to state 18
    vars                           shift and go to state 8
    program_second_prime           shift and go to state 10
    type                           shift and go to state 11

state 10

    (4) program_prime -> program_second_prime .

    $end            reduce using rule 4 (program_prime -> program_second_prime .)


state 11

    (11) vars -> type . vars_prime vars_fourth_prime
    (12) vars_prime -> . ID save_id vars_second_prime

    ID              shift and go to state 20

    vars_prime                     shift and go to state 19

state 12

    (32) modules -> FUNCTION . modules_prime ID add_module LEFTP modules_second_prime
    (33) modules_prime -> . type
    (34) modules_prime -> . NOTYPE void_type
    (26) type -> . TYPEINT
    (27) type -> . TYPEFLOAT
    (28) type -> . TYPECHAR

    NOTYPE          shift and go to state 23
    TYPEINT         shift and go to state 14
    TYPEFLOAT       shift and go to state 15
    TYPECHAR        shift and go to state 16

    modules_prime                  shift and go to state 21
    type                           shift and go to state 22

state 13

    (5) program_second_prime -> MAIN . fill_main LEFTBRACE program_third_prime
    (10) fill_main -> .

    LEFTBRACE       reduce using rule 10 (fill_main -> .)

    fill_main                      shift and go to state 24

state 14

    (26) type -> TYPEINT .

    ID              reduce using rule 26 (type -> TYPEINT .)


state 15

    (27) type -> TYPEFLOAT .

    ID              reduce using rule 27 (type -> TYPEFLOAT .)


state 16

    (28) type -> TYPECHAR .

    ID              reduce using rule 28 (type -> TYPECHAR .)


state 17

    (2) program_prime -> vars program_prime .

    $end            reduce using rule 2 (program_prime -> vars program_prime .)


state 18

    (3) program_prime -> modules program_prime .

    $end            reduce using rule 3 (program_prime -> modules program_prime .)


state 19

    (11) vars -> type vars_prime . vars_fourth_prime
    (20) vars_fourth_prime -> . SEPARATOR store_variable vars_prime vars_fourth_prime
    (21) vars_fourth_prime -> . store_variable vars_fifth_prime
    (25) store_variable -> .

    SEPARATOR       shift and go to state 26
    EOS             reduce using rule 25 (store_variable -> .)

    vars_fourth_prime              shift and go to state 25
    store_variable                 shift and go to state 27

state 20

    (12) vars_prime -> ID . save_id vars_second_prime
    (23) save_id -> .

    LEFTB           reduce using rule 23 (save_id -> .)
    SEPARATOR       reduce using rule 23 (save_id -> .)
    EOS             reduce using rule 23 (save_id -> .)

    save_id                        shift and go to state 28

state 21

    (32) modules -> FUNCTION modules_prime . ID add_module LEFTP modules_second_prime

    ID              shift and go to state 29


state 22

    (33) modules_prime -> type .

    ID              reduce using rule 33 (modules_prime -> type .)


state 23

    (34) modules_prime -> NOTYPE . void_type
    (42) void_type -> .

    ID              reduce using rule 42 (void_type -> .)

    void_type                      shift and go to state 30

state 24

    (5) program_second_prime -> MAIN fill_main . LEFTBRACE program_third_prime

    LEFTBRACE       shift and go to state 31


state 25

    (11) vars -> type vars_prime vars_fourth_prime .

    FUNCTION        reduce using rule 11 (vars -> type vars_prime vars_fourth_prime .)
    MAIN            reduce using rule 11 (vars -> type vars_prime vars_fourth_prime .)
    TYPEINT         reduce using rule 11 (vars -> type vars_prime vars_fourth_prime .)
    TYPEFLOAT       reduce using rule 11 (vars -> type vars_prime vars_fourth_prime .)
    TYPECHAR        reduce using rule 11 (vars -> type vars_prime vars_fourth_prime .)
    ID              reduce using rule 11 (vars -> type vars_prime vars_fourth_prime .)
    PRINT           reduce using rule 11 (vars -> type vars_prime vars_fourth_prime .)
    WHILE           reduce using rule 11 (vars -> type vars_prime vars_fourth_prime .)
    DO              reduce using rule 11 (vars -> type vars_prime vars_fourth_prime .)
    IF              reduce using rule 11 (vars -> type vars_prime vars_fourth_prime .)
    JEDO            reduce using rule 11 (vars -> type vars_prime vars_fourth_prime .)
    READINPUT       reduce using rule 11 (vars -> type vars_prime vars_fourth_prime .)


state 26

    (20) vars_fourth_prime -> SEPARATOR . store_variable vars_prime vars_fourth_prime
    (25) store_variable -> .

    ID              reduce using rule 25 (store_variable -> .)

    store_variable                 shift and go to state 32

state 27

    (21) vars_fourth_prime -> store_variable . vars_fifth_prime
    (22) vars_fifth_prime -> . EOS

    EOS             shift and go to state 34

    vars_fifth_prime               shift and go to state 33

state 28

    (12) vars_prime -> ID save_id . vars_second_prime
    (13) vars_second_prime -> . change_dimension LEFTB exp RIGHTB first_dimension vars_third_prime
    (14) vars_second_prime -> .
    (24) change_dimension -> .

    SEPARATOR       reduce using rule 14 (vars_second_prime -> .)
    EOS             reduce using rule 14 (vars_second_prime -> .)
    LEFTB           reduce using rule 24 (change_dimension -> .)

    vars_second_prime              shift and go to state 35
    change_dimension               shift and go to state 36

state 29

    (32) modules -> FUNCTION modules_prime ID . add_module LEFTP modules_second_prime
    (43) add_module -> .

    LEFTP           reduce using rule 43 (add_module -> .)

    add_module                     shift and go to state 37

state 30

    (34) modules_prime -> NOTYPE void_type .

    ID              reduce using rule 34 (modules_prime -> NOTYPE void_type .)


state 31

    (5) program_second_prime -> MAIN fill_main LEFTBRACE . program_third_prime
    (6) program_third_prime -> . vars program_third_prime
    (7) program_third_prime -> . body RIGHTBRACE EOS
    (11) vars -> . type vars_prime vars_fourth_prime
    (29) body -> . statement body_prime
    (26) type -> . TYPEINT
    (27) type -> . TYPEFLOAT
    (28) type -> . TYPECHAR
    (47) statement -> . assignment EOS
    (48) statement -> . print EOS
    (49) statement -> . functioncall EOS
    (50) statement -> . condition
    (51) statement -> . specialfunction EOS
    (52) statement -> . input EOS
    (98) assignment -> . ID push_id assignment_prime EQUALS push_operator expression eval_assignment
    (130) print -> . PRINT LEFTP expression print_quad print_prime
    (121) functioncall -> . ID verify_function LEFTP fake_bottom exp verify_parameter functioncall_prime
    (104) condition -> . WHILE save_jump LEFTP compoundexp RIGHTP gotof_quad LEFTBRACE body RIGHTBRACE goto_while_fill
    (105) condition -> . DO save_jump LEFTBRACE body RIGHTBRACE WHILE LEFTP compoundexp RIGHTP gotov_quad
    (106) condition -> . IF condition_prime
    (134) specialfunction -> . JEDO POINT specialfunction_prime
    (156) input -> . READINPUT LEFTP ID input_quad RIGHTP

    TYPEINT         shift and go to state 14
    TYPEFLOAT       shift and go to state 15
    TYPECHAR        shift and go to state 16
    ID              shift and go to state 48
    PRINT           shift and go to state 49
    WHILE           shift and go to state 50
    DO              shift and go to state 51
    IF              shift and go to state 52
    JEDO            shift and go to state 53
    READINPUT       shift and go to state 54

    program_third_prime            shift and go to state 38
    vars                           shift and go to state 39
    body                           shift and go to state 40
    type                           shift and go to state 11
    statement                      shift and go to state 41
    assignment                     shift and go to state 42
    print                          shift and go to state 43
    functioncall                   shift and go to state 44
    condition                      shift and go to state 45
    specialfunction                shift and go to state 46
    input                          shift and go to state 47

state 32

    (20) vars_fourth_prime -> SEPARATOR store_variable . vars_prime vars_fourth_prime
    (12) vars_prime -> . ID save_id vars_second_prime

    ID              shift and go to state 20

    vars_prime                     shift and go to state 55

state 33

    (21) vars_fourth_prime -> store_variable vars_fifth_prime .

    FUNCTION        reduce using rule 21 (vars_fourth_prime -> store_variable vars_fifth_prime .)
    MAIN            reduce using rule 21 (vars_fourth_prime -> store_variable vars_fifth_prime .)
    TYPEINT         reduce using rule 21 (vars_fourth_prime -> store_variable vars_fifth_prime .)
    TYPEFLOAT       reduce using rule 21 (vars_fourth_prime -> store_variable vars_fifth_prime .)
    TYPECHAR        reduce using rule 21 (vars_fourth_prime -> store_variable vars_fifth_prime .)
    ID              reduce using rule 21 (vars_fourth_prime -> store_variable vars_fifth_prime .)
    PRINT           reduce using rule 21 (vars_fourth_prime -> store_variable vars_fifth_prime .)
    WHILE           reduce using rule 21 (vars_fourth_prime -> store_variable vars_fifth_prime .)
    DO              reduce using rule 21 (vars_fourth_prime -> store_variable vars_fifth_prime .)
    IF              reduce using rule 21 (vars_fourth_prime -> store_variable vars_fifth_prime .)
    JEDO            reduce using rule 21 (vars_fourth_prime -> store_variable vars_fifth_prime .)
    READINPUT       reduce using rule 21 (vars_fourth_prime -> store_variable vars_fifth_prime .)


state 34

    (22) vars_fifth_prime -> EOS .

    FUNCTION        reduce using rule 22 (vars_fifth_prime -> EOS .)
    MAIN            reduce using rule 22 (vars_fifth_prime -> EOS .)
    TYPEINT         reduce using rule 22 (vars_fifth_prime -> EOS .)
    TYPEFLOAT       reduce using rule 22 (vars_fifth_prime -> EOS .)
    TYPECHAR        reduce using rule 22 (vars_fifth_prime -> EOS .)
    ID              reduce using rule 22 (vars_fifth_prime -> EOS .)
    PRINT           reduce using rule 22 (vars_fifth_prime -> EOS .)
    WHILE           reduce using rule 22 (vars_fifth_prime -> EOS .)
    DO              reduce using rule 22 (vars_fifth_prime -> EOS .)
    IF              reduce using rule 22 (vars_fifth_prime -> EOS .)
    JEDO            reduce using rule 22 (vars_fifth_prime -> EOS .)
    READINPUT       reduce using rule 22 (vars_fifth_prime -> EOS .)


state 35

    (12) vars_prime -> ID save_id vars_second_prime .

    SEPARATOR       reduce using rule 12 (vars_prime -> ID save_id vars_second_prime .)
    EOS             reduce using rule 12 (vars_prime -> ID save_id vars_second_prime .)


state 36

    (13) vars_second_prime -> change_dimension . LEFTB exp RIGHTB first_dimension vars_third_prime

    LEFTB           shift and go to state 56


state 37

    (32) modules -> FUNCTION modules_prime ID add_module . LEFTP modules_second_prime

    LEFTP           shift and go to state 57


state 38

    (5) program_second_prime -> MAIN fill_main LEFTBRACE program_third_prime .

    $end            reduce using rule 5 (program_second_prime -> MAIN fill_main LEFTBRACE program_third_prime .)


state 39

    (6) program_third_prime -> vars . program_third_prime
    (6) program_third_prime -> . vars program_third_prime
    (7) program_third_prime -> . body RIGHTBRACE EOS
    (11) vars -> . type vars_prime vars_fourth_prime
    (29) body -> . statement body_prime
    (26) type -> . TYPEINT
    (27) type -> . TYPEFLOAT
    (28) type -> . TYPECHAR
    (47) statement -> . assignment EOS
    (48) statement -> . print EOS
    (49) statement -> . functioncall EOS
    (50) statement -> . condition
    (51) statement -> . specialfunction EOS
    (52) statement -> . input EOS
    (98) assignment -> . ID push_id assignment_prime EQUALS push_operator expression eval_assignment
    (130) print -> . PRINT LEFTP expression print_quad print_prime
    (121) functioncall -> . ID verify_function LEFTP fake_bottom exp verify_parameter functioncall_prime
    (104) condition -> . WHILE save_jump LEFTP compoundexp RIGHTP gotof_quad LEFTBRACE body RIGHTBRACE goto_while_fill
    (105) condition -> . DO save_jump LEFTBRACE body RIGHTBRACE WHILE LEFTP compoundexp RIGHTP gotov_quad
    (106) condition -> . IF condition_prime
    (134) specialfunction -> . JEDO POINT specialfunction_prime
    (156) input -> . READINPUT LEFTP ID input_quad RIGHTP

    TYPEINT         shift and go to state 14
    TYPEFLOAT       shift and go to state 15
    TYPECHAR        shift and go to state 16
    ID              shift and go to state 48
    PRINT           shift and go to state 49
    WHILE           shift and go to state 50
    DO              shift and go to state 51
    IF              shift and go to state 52
    JEDO            shift and go to state 53
    READINPUT       shift and go to state 54

    vars                           shift and go to state 39
    program_third_prime            shift and go to state 58
    body                           shift and go to state 40
    type                           shift and go to state 11
    statement                      shift and go to state 41
    assignment                     shift and go to state 42
    print                          shift and go to state 43
    functioncall                   shift and go to state 44
    condition                      shift and go to state 45
    specialfunction                shift and go to state 46
    input                          shift and go to state 47

state 40

    (7) program_third_prime -> body . RIGHTBRACE EOS

    RIGHTBRACE      shift and go to state 59


state 41

    (29) body -> statement . body_prime
    (30) body_prime -> . body
    (31) body_prime -> .
    (29) body -> . statement body_prime
    (47) statement -> . assignment EOS
    (48) statement -> . print EOS
    (49) statement -> . functioncall EOS
    (50) statement -> . condition
    (51) statement -> . specialfunction EOS
    (52) statement -> . input EOS
    (98) assignment -> . ID push_id assignment_prime EQUALS push_operator expression eval_assignment
    (130) print -> . PRINT LEFTP expression print_quad print_prime
    (121) functioncall -> . ID verify_function LEFTP fake_bottom exp verify_parameter functioncall_prime
    (104) condition -> . WHILE save_jump LEFTP compoundexp RIGHTP gotof_quad LEFTBRACE body RIGHTBRACE goto_while_fill
    (105) condition -> . DO save_jump LEFTBRACE body RIGHTBRACE WHILE LEFTP compoundexp RIGHTP gotov_quad
    (106) condition -> . IF condition_prime
    (134) specialfunction -> . JEDO POINT specialfunction_prime
    (156) input -> . READINPUT LEFTP ID input_quad RIGHTP

    RIGHTBRACE      reduce using rule 31 (body_prime -> .)
    RETURN          reduce using rule 31 (body_prime -> .)
    ID              shift and go to state 48
    PRINT           shift and go to state 49
    WHILE           shift and go to state 50
    DO              shift and go to state 51
    IF              shift and go to state 52
    JEDO            shift and go to state 53
    READINPUT       shift and go to state 54

    statement                      shift and go to state 41
    body_prime                     shift and go to state 60
    body                           shift and go to state 61
    assignment                     shift and go to state 42
    print                          shift and go to state 43
    functioncall                   shift and go to state 44
    condition                      shift and go to state 45
    specialfunction                shift and go to state 46
    input                          shift and go to state 47

state 42

    (47) statement -> assignment . EOS

    EOS             shift and go to state 62


state 43

    (48) statement -> print . EOS

    EOS             shift and go to state 63


state 44

    (49) statement -> functioncall . EOS

    EOS             shift and go to state 64


state 45

    (50) statement -> condition .

    ID              reduce using rule 50 (statement -> condition .)
    PRINT           reduce using rule 50 (statement -> condition .)
    WHILE           reduce using rule 50 (statement -> condition .)
    DO              reduce using rule 50 (statement -> condition .)
    IF              reduce using rule 50 (statement -> condition .)
    JEDO            reduce using rule 50 (statement -> condition .)
    READINPUT       reduce using rule 50 (statement -> condition .)
    RIGHTBRACE      reduce using rule 50 (statement -> condition .)
    RETURN          reduce using rule 50 (statement -> condition .)
    ELSE            reduce using rule 50 (statement -> condition .)
    ELSEIF          reduce using rule 50 (statement -> condition .)


state 46

    (51) statement -> specialfunction . EOS

    EOS             shift and go to state 65


state 47

    (52) statement -> input . EOS

    EOS             shift and go to state 66


state 48

    (98) assignment -> ID . push_id assignment_prime EQUALS push_operator expression eval_assignment
    (121) functioncall -> ID . verify_function LEFTP fake_bottom exp verify_parameter functioncall_prime
    (94) push_id -> .
    (124) verify_function -> .

    LEFTB           reduce using rule 94 (push_id -> .)
    EQUALS          reduce using rule 94 (push_id -> .)
    LEFTP           reduce using rule 124 (verify_function -> .)

    push_id                        shift and go to state 67
    verify_function                shift and go to state 68

state 49

    (130) print -> PRINT . LEFTP expression print_quad print_prime

    LEFTP           shift and go to state 69


state 50

